<resources>
    <string name="app_name">Repo Commit Timeline</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="search_fail_response_text">Sorry. Search User have failed.</string>
    <string name="avatar">Avatar</string>
    <string name="search">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="search_github_user">Search GitHub User</string>
    <string name="go_to_next_page">Go to next page</string>
    <string name="go_to_previous_page">Go to previous page</string>
</resources>