<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userRepoViewModel"
            type="kost.romi.repocommittimeline.ui.userrepo.UserRepoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.userrepo.UserRepoFragment">

        <ProgressBar
            android:id="@+id/search_user_progressBar"
            style="@style/progress_bar_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_user_fail_response_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_fail_response_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_repo_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/bottom_update_progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_page_floatingActionButton"
            style="@style/page_selection_FAB"
            android:contentDescription="@string/go_to_next_page"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/user_repo_RecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_chevron_right_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/prev_page_floatingActionButton"
            style="@style/page_selection_FAB"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/go_to_previous_page"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/user_repo_RecyclerView"
            app:layout_constraintEnd_toStartOf="@+id/next_page_floatingActionButton"
            app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

        <ProgressBar
            android:id="@+id/bottom_update_progressBar"
            style="@style/progress_bar_default"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                style="@style/bottom_app_bar_default"
                app:menu="@menu/bottom_nav_menu"
                app:title="">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/appBar_avatar_ImageView"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/avatar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/appBar_title_TextView"
                        style="@style/app_bar_text_view_default"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/app_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/appBar_avatar_ImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.bottomappbar.BottomAppBar>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>